--- a/ICML_workshop_submission/icml2016stylefiles/DeepLIFT.tex
+++ b/ICML_workshop_submission/icml2016stylefiles/DeepLIFT.tex
@@ -372,6 +372,25 @@ AS \& PG conceived of DeepLIFT. AS implemented DeepLIFT in software. PG led appl
 \bibliographystyle{icml2016}
 \bibliography{LIFTPAD_references}
 
+\section{References}
+
+Bach, Sebastian, Alexander Binder, Gregoire Montavon, Frederick Klauschen, Klaus-Robert Muller, and Wojciech Samek. 2015. ``On Pixel-Wise Explanations for Non-Linear Classifier Decisions by Layer-Wise Relevance Propagation." PloS One 10 (7): e0130140.
+
+Chollet, Franois. 2015. ``Keras."
+
+Chung, Junyoung, Caglar Gulcehre, Kyunghyun Cho, and Yoshua Bengio. 2014. ``Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling." arXiv [cs.NE]. arXiv. http://arxiv.org/abs/1412.3555.
+
+Hochreiter, S., and J. Schmidhuber. 1997. ``Long Short-Term Memory." Neural Computation 9 (8): 1735?80.
+
+Long, Jonathan, Evan Shelhamer, and Trevor Darrell. 2015. ``Fully Convolutional Networks for Semantic Segmentation." In Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition, 3431?40.
+
+Samek, Wojciech, Alexander Binder, Gregoire Montavon, Sebastian Bach, and Klaus-Robert Muller. 2015. ``Evaluating the Visualization of What a Deep Neural Network Has Learned." arXiv [cs.CV]. arXiv. http://arxiv.org/abs/1509.06321.
+
+Simonyan, Karen, Andrea Vedaldi, and Andrew Zisserman. 2013. ``Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps." arXiv [cs.CV]. arXiv. http://arxiv.org/abs/1312.6034.
+
+Springenberg, Jost Tobias, Alexey Dosovitskiy, Thomas Brox, and Martin Riedmiller. 2014. ``Striving for Simplicity: The All Convolutional Net." arXiv [cs.LG]. arXiv. http://arxiv.org/abs/1412.6806.
+
+Zeiler, Matthew D., and Rob Fergus. 2014. ``Visualizing and Understanding Convolutional Networks." In Computer Vision--ECCV 2014, 818?33. Springer.
 
 
 \end{document} 
