getting latex to work
Former-commit-id: 9e5308aa69b02d80370c3fa7e73a4be92079f317

--- a/ICML_workshop_submission/icml2016stylefiles/DeepLIFT.tex
+++ b/ICML_workshop_submission/icml2016stylefiles/DeepLIFT.tex
@@ -370,7 +370,7 @@ AS \& PG conceived of DeepLIFT. AS implemented DeepLIFT in software. PG led appl
 
 \nocite{*}
 \bibliographystyle{icml2016}
-\bibliography{LIFTPAD_references}
+\bibliography{DeepLIFT}
 
 
 
